--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -1,3 +1,4 @@
+/* app.css */
 @import "./base.css";
 @import "./layout.css";
 @import "./sidebar.css";
@@ -5,3 +6,4 @@
 @import "./tables.css";
 @import "./forms.css";
 @import "./mobile.css";
+@import "./auth.css";
