--- a/frontend/src/styles/memberService.css
+++ b/frontend/src/styles/memberService.css
@@ -53,7 +53,7 @@
 
 /* Button */
 .svcPill {
-  margin-top: -10px;
+  margin-top: 2%;
   padding: 14px 26px;
   border-radius: 999px;
   border: none;
